Update links and description

--- a/history-based-api.html
+++ b/history-based-api.html
@@ -14,7 +14,23 @@
                 ,   company:    "Google"
                 ,   companyURL: "http://google.com/" }
           ]
+          
       ,   edDraftURI:   "https://github.com/majido/scroll-restoration-proposal"
+      ,   otherLinks: [{
+            key: 'Participation',
+            data: [
+                {
+                    value: 'GitHub repository',
+                    href: 'https://github.com/majido/scroll-restoration-proposal/'
+                }, {
+                    value: 'File a bug / view open issues',
+                    href: 'https://github.com/majido/scroll-restoration-proposal/issues'
+                }, {
+                    value: 'E-mail feedback',
+                    href: 'mailto:whatwg@whatwg.org?subject=%5BScrollRestoration%5D'
+                }
+             ]
+          }]
       ,   copyrightStart: 2015
       ,   noIDLIn:      true
       ,   wg:           ""
