--- a/history-based-api.html
+++ b/history-based-api.html
@@ -15,7 +15,7 @@
                 ,   companyURL: "http://google.com/" }
           ]
           
-      ,   edDraftURI:   "https://github.com/majido/scroll-restoration-proposal"
+      ,   edDraftURI:   "http://majido.github.io/scroll-restoration-proposal/history-based-api.html"
       ,   otherLinks: [{
             key: 'Participation',
             data: [
