Add flag list to test index

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Scroll Restoration tests</title>
 <h1>Scroll Restoration tests</h1>
+<p> In chromium run these with the following flags: <code>--disable-web-security --enable-blink-features=ScrollRestoration</code></p>
 
 <ul>
  <li><a href="scroll-restoration-basic.html">Basic</a>
