Remove mention of scale from the spec

--- a/history-based-api.html
+++ b/history-based-api.html
@@ -48,8 +48,8 @@
   <body>
     <section id='abstract'>
         This document describes an API that gives web authors additional control over
-        user agent's restoration of persisted user state in particular the scroll
-        position and page scale.
+        user agent's restoration of persisted user state in particular the document's
+        scroll position.
     </section>
     
     <section id='sotd'>
