Update documented issues and fix links

--- a/history-based-api.html
+++ b/history-based-api.html
@@ -173,8 +173,8 @@ Modify the [pushState algorithm][pushstate-algorithm] and update a step 4.3 as f
 
 ### Navigating to Fragment
 
-Modify the [navigating to a fragment identifier algorithm][scroll-to-frag-
-algorithm] and update step 3 as following:
+Modify the [navigating to a fragment identifier algorithm][scroll-to-frag-algorithm]
+and update step 3 as following:
 
   3\. Append a new entry at the end of the History object representing the new
   resource and its Document object, related state, **and  current history
@@ -183,8 +183,8 @@ algorithm] and update step 3 as following:
 
 ### Navigating to a new page
 
-Modify the [update the session history with the new page][update-session-
-algorithm] algorithm  and update step 2.2 as following:
+Modify the [update the session history with the new page][update-session-algorithm]
+algorithm  and update step 2.2 as following:
 
   (2\.)2\. Append a new entry at the end of the History object representing
 the new resource and its Document object and related state **and with default
