Use HTTPS where possible
This avoids mixed content issues on https://majido.github.io/scroll-restoration-proposal/history-based-api.html.

--- a/history-based-api.html
+++ b/history-based-api.html
@@ -12,10 +12,10 @@
       ,   editors: [
                 {   name:       "Majid Valipour"
                 ,   company:    "Google"
-                ,   companyURL: "http://google.com/" }
+                ,   companyURL: "https://www.google.com/" }
           ]
           
-      ,   edDraftURI:   "http://majido.github.io/scroll-restoration-proposal/history-based-api.html"
+      ,   edDraftURI:   "https://majido.github.io/scroll-restoration-proposal/history-based-api.html"
       ,   otherLinks: [{
             key: 'Participation',
             data: [
@@ -43,7 +43,7 @@
       ,   format: 'markdown'
       };
     </script>
-    <script src='http://www.w3.org/Tools/respec/respec-w3c-common' class='remove' async></script>
+    <script src='https://www.w3.org/Tools/respec/respec-w3c-common' class='remove' async></script>
  </head>
   <body>
     <section id='abstract'>
