--- a/tests/scroll-restoration-push-replace.html
+++ b/tests/scroll-restoration-push-replace.html
@@ -57,8 +57,8 @@
       }
       console.log(`verifying ${key}`);
       assert_equals(history.state.key, key, `state should have key: ${key}`);
-      assert_equals(document.body.scrollLeft, entry.expectedScroll[0], `scrollLeft is correct for ${key}`);
-      assert_equals(document.body.scrollTop, entry.expectedScroll[1], `scrollTop is correct ${key}`);
+      assert_equals(window.scrollX, entry.expectedScroll[0], `scrollX is correct for ${key}`);
+      assert_equals(window.scrollY, entry.expectedScroll[1], `scrollY is correct ${key}`);
 
       window.history.back();
     }));
